refactor: remove cas login

--- a/src/main/webapp/src/locales/en/buttons.json
+++ b/src/main/webapp/src/locales/en/buttons.json
@@ -5,7 +5,6 @@
     "add": "Add",
     "delete": "Delete",
     "close": "Close",
-    "edit": "Edit",
-    "signIn": "Sign In"
+    "edit": "Edit"
   }
 }
