--- a/src/main/webapp/src/locales/fr/buttons.json
+++ b/src/main/webapp/src/locales/fr/buttons.json
@@ -5,7 +5,6 @@
     "add": "Ajouter",
     "delete": "Supprimer",
     "close": "Fermer",
-    "edit": "Editer",
-    "signIn": "Connexion"
+    "edit": "Editer"
   }
 }
