feat: share dialog, information drawer and confirmation dialog

--- a/src/main/webapp/src/locales/fr/navigations.json
+++ b/src/main/webapp/src/locales/fr/navigations.json
@@ -1,5 +1,9 @@
 {
   "navigation": {
+    "title": {
+      "information": "Informations",
+      "histories": "Historiques"
+    },
     "item": {
       "projects": "Projets",
       "favorites": "Favoris",
