--- a/src/main/webapp/src/locales/en/navigations.json
+++ b/src/main/webapp/src/locales/en/navigations.json
@@ -1,5 +1,9 @@
 {
   "navigation": {
+    "title": {
+      "information": "Information",
+      "histories": "Histories"
+    },
     "item": {
       "projects": "Projects",
       "favorites": "Favorites",
