feat: new information drawer

--- a/src/main/webapp/src/locales/en/buttons.json
+++ b/src/main/webapp/src/locales/en/buttons.json
@@ -5,6 +5,12 @@
     "add": "Add",
     "delete": "Delete",
     "close": "Close",
-    "edit": "Edit"
+    "edit": "Edit",
+    "revert": "Revert",
+    "view": "View",
+    "options": "Options",
+    "star": "Star",
+    "unstar": "Unstar",
+    "share": "Share"
   }
 }
