--- a/src/main/webapp/src/locales/en/dialogs.json
+++ b/src/main/webapp/src/locales/en/dialogs.json
@@ -2,6 +2,10 @@
   "dialog": {
     "share": {
       "title": "Share"
+    },
+    "file": {
+      "title": "New File",
+      "description": "File type"
     }
   }
 }
