--- a/src/main/webapp/src/locales/en/information.json
+++ b/src/main/webapp/src/locales/en/information.json
@@ -3,6 +3,7 @@
     "title": "Title",
     "description": "Description",
     "creationDate": "Created on",
-    "editionDate": "Edited on"
+    "editionDate": "Edited on",
+    "visibility": "Visibility"
   }
 }
