--- a/src/main/webapp/src/locales/en/navigations.json
+++ b/src/main/webapp/src/locales/en/navigations.json
@@ -2,6 +2,7 @@
   "navigation": {
     "title": {
       "information": "Information",
+      "share": "Share",
       "histories": "Histories"
     },
     "item": {
