--- a/src/main/webapp/src/locales/fr/navigations.json
+++ b/src/main/webapp/src/locales/fr/navigations.json
@@ -2,6 +2,7 @@
   "navigation": {
     "title": {
       "information": "Informations",
+      "share": "Partages",
       "histories": "Historiques"
     },
     "item": {
