feat: update translations

--- a/src/main/webapp/src/locales/en/information.json
+++ b/src/main/webapp/src/locales/en/information.json
@@ -2,8 +2,10 @@
   "information": {
     "title": "Title",
     "description": "Description",
-    "creationDate": "Created on",
-    "editionDate": "Edited on",
-    "visibility": "Visibility"
+    "creationDate": "Created on {date}",
+    "editionDate": "Edited on {date}",
+    "visibility": "Visibility",
+    "edited": "Edited",
+    "duration": "{duration} ago"
   }
 }
