--- a/src/main/webapp/src/locales/en/menus.json
+++ b/src/main/webapp/src/locales/en/menus.json
@@ -2,6 +2,7 @@
   "menu": {
     "item": {
       "information": "Information",
+      "share": "Share",
       "histories": "Historiques",
       "exportOnNextcloud": "Export on Nextcloud",
       "download": "Download",
