--- a/src/main/webapp/src/locales/fr/menus.json
+++ b/src/main/webapp/src/locales/fr/menus.json
@@ -2,6 +2,7 @@
   "menu": {
     "item": {
       "information": "Informations",
+      "share": "Partages",
       "histories": "Historiques",
       "exportOnNextcloud": "Exporter sur Nextcloud",
       "download": "Télécharger",
