feat: add yes no colors properties

--- a/src/main/webapp/src/locales/en/dialogs.json
+++ b/src/main/webapp/src/locales/en/dialogs.json
@@ -6,6 +6,9 @@
     "file": {
       "title": "New File",
       "description": "File type"
+    },
+    "delete": {
+      "title": "Are you sure to delete?"
     }
   }
 }
