--- a/src/main/webapp/src/locales/fr/dialogs.json
+++ b/src/main/webapp/src/locales/fr/dialogs.json
@@ -6,6 +6,9 @@
     "file": {
       "title": "Nouveau fichier",
       "description": "Type de fichier"
+    },
+    "delete": {
+      "title": "Êtes-vous sûr d'effecer ?"
     }
   }
 }
