feat: add login dialog

--- a/src/main/webapp/src/locales/en/dialogs.json
+++ b/src/main/webapp/src/locales/en/dialogs.json
@@ -9,6 +9,10 @@
     },
     "delete": {
       "title": "Are you sure to delete?"
+    },
+    "signIn": {
+      "title": "Sign in",
+      "fail": "Unable to sign in"
     }
   }
 }
