feat: change file name and description

--- a/src/main/webapp/src/locales/fr/buttons.json
+++ b/src/main/webapp/src/locales/fr/buttons.json
@@ -5,7 +5,7 @@
     "add": "Ajouter",
     "delete": "Supprimer",
     "close": "Fermer",
-    "edit": "Editer",
+    "edit": "Modifier",
     "revert": "Rétablir",
     "view": "Voir",
     "options": "Options",
