--- a/src/main/webapp/src/locales/en/toasts.json
+++ b/src/main/webapp/src/locales/en/toasts.json
@@ -1,6 +1,8 @@
 {
   "toast": {
     "initConfigurationStore": "Unable to load configuration",
+    "loadFiles": "Unable to load file list",
+    "loadFile": "Unable to load file",
     "error": {
       "401": "You are not allowed to access this ressource",
       "404": "Ressource can not be found",
