--- a/src/main/webapp/src/locales/fr/menus.json
+++ b/src/main/webapp/src/locales/fr/menus.json
@@ -1,6 +1,8 @@
 {
   "menu": {
     "item": {
+      "star": "Ajouter aux favoris",
+      "unstar": "Retirer des favoris",
       "information": "Informations",
       "share": "Partages",
       "histories": "Historiques",
