--- a/src/main/webapp/src/locales/en/toasts.json
+++ b/src/main/webapp/src/locales/en/toasts.json
@@ -10,8 +10,8 @@
       "401": "Connect to Nextcloud by clicking here and try again"
     },
     "error": {
-      "401": "You are not allowed to access this ressource",
-      "404": "Ressource can not be found",
+      "401": "You are not allowed to access this resource",
+      "404": "Resource can not be found",
       "500": "An internal server error has occurred",
       "unmanaged": "An unmanaged error has occurred",
       "stock": "An error has occurred",
