feat: add join dialog

--- a/src/main/webapp/src/locales/en/buttons.json
+++ b/src/main/webapp/src/locales/en/buttons.json
@@ -11,6 +11,7 @@
     "options": "Options",
     "star": "Star",
     "unstar": "Unstar",
-    "share": "Share"
+    "share": "Share",
+    "join": "Join"
   }
 }
