--- a/src/main/webapp/src/locales/en/dialogs.json
+++ b/src/main/webapp/src/locales/en/dialogs.json
@@ -13,6 +13,9 @@
     "signIn": {
       "title": "Sign in",
       "fail": "Unable to sign in"
+    },
+    "join": {
+      "title": "Join"
     }
   }
 }
