--- a/src/main/webapp/src/locales/fr/buttons.json
+++ b/src/main/webapp/src/locales/fr/buttons.json
@@ -11,6 +11,7 @@
     "options": "Options",
     "star": "Favoris",
     "unstar": "Retirer des favoris",
-    "share": "Partager"
+    "share": "Partager",
+    "join": "Rejoindre"
   }
 }
