--- a/src/main/webapp/src/locales/fr/dialogs.json
+++ b/src/main/webapp/src/locales/fr/dialogs.json
@@ -13,6 +13,9 @@
     "signIn": {
       "title": "Connexion",
       "fail": "Impossible de se connecter"
+    },
+    "join": {
+      "title": "Rejoindre"
     }
   }
 }
