feat: add room creation and join ability

--- a/src/main/webapp/src/locales/en/buttons.json
+++ b/src/main/webapp/src/locales/en/buttons.json
@@ -12,6 +12,8 @@
     "star": "Star",
     "unstar": "Unstar",
     "share": "Share",
-    "join": "Join"
+    "join": "Join",
+    "rooms": "Rooms",
+    "create": "Create"
   }
 }
