feat: share in a room ability

--- a/src/main/webapp/src/locales/en/buttons.json
+++ b/src/main/webapp/src/locales/en/buttons.json
@@ -14,6 +14,8 @@
     "share": "Share",
     "join": "Join",
     "rooms": "Rooms",
-    "create": "Create"
+    "create": "Create",
+    "shareInRoom": "In a room",
+    "createAndJoin": "Create and join"
   }
 }
