--- a/src/main/webapp/src/locales/fr/buttons.json
+++ b/src/main/webapp/src/locales/fr/buttons.json
@@ -14,6 +14,8 @@
     "share": "Partager",
     "join": "Rejoindre",
     "rooms": "Salles",
-    "create": "Créer"
+    "create": "Créer",
+    "shareInRoom": "Dans une salle",
+    "createAndJoin": "Créer et rejoindre"
   }
 }
