--- a/src/main/webapp/src/locales/en/dialogs.json
+++ b/src/main/webapp/src/locales/en/dialogs.json
@@ -1,8 +1,5 @@
 {
   "dialog": {
-    "share": {
-      "title": "Share"
-    },
     "file": {
       "title": "New File",
       "description": "File type"
@@ -16,6 +13,10 @@
     },
     "room": {
       "title": "Create or join a room"
+    },
+    "shareInRoom": {
+      "title": "Share in a room",
+      "description": "The code will be :"
     }
   }
 }
