feat: leave app/room confirmation dialog

--- a/src/main/webapp/src/locales/en/buttons.json
+++ b/src/main/webapp/src/locales/en/buttons.json
@@ -18,6 +18,7 @@
     "autoSave": {
       "enabled": "Auto save enabled",
       "disabled": "Auto save disabled"
-    }
+    },
+    "leave": "Leave"
   }
 }
