--- a/src/main/webapp/src/locales/fr/buttons.json
+++ b/src/main/webapp/src/locales/fr/buttons.json
@@ -18,6 +18,7 @@
     "autoSave": {
       "enabled": "Sauvegarde automatique activée",
       "disabled": "Sauvegarde automatique désactivée"
-    }
+    },
+    "leave": "Quitter"
   }
 }
