--- a/src/main/webapp/src/locales/fr/dialogs.json
+++ b/src/main/webapp/src/locales/fr/dialogs.json
@@ -5,7 +5,7 @@
       "description": "Type de fichier"
     },
     "delete": {
-      "title": "Êtes-vous sûr d'effacer ?"
+      "title": "Êtes-vous sûr de vouloir supprimer ?"
     },
     "signIn": {
       "title": "Connexion"
