--- a/src/main/webapp/src/locales/fr/toasts.json
+++ b/src/main/webapp/src/locales/fr/toasts.json
@@ -11,7 +11,7 @@
     "error": {
       "401": "Vous n'êtes pas autorisé à consulter la ressource",
       "404": "La ressource demandée n'a pas pu être trouvée",
-      "500": "Un erreur interne au serveur est survenue",
+      "500": "Une erreur interne au serveur est survenue",
       "unmanaged": "Une erreur non gérée est survenue",
       "stock": "Une erreur est survenue",
       "unknown": "Une erreur inconnue est survenue"
