feat: new login dialog

--- a/src/main/webapp/src/locales/en/buttons.json
+++ b/src/main/webapp/src/locales/en/buttons.json
@@ -19,6 +19,8 @@
       "enabled": "Auto save enabled",
       "disabled": "Auto save disabled"
     },
-    "leave": "Leave"
+    "leave": "Leave",
+    "signIn": "Sign in",
+    "retry": "Retry"
   }
 }
