--- a/src/main/webapp/src/locales/en/errors.json
+++ b/src/main/webapp/src/locales/en/errors.json
@@ -2,7 +2,7 @@
   "error": {
     "signIn": {
       "config": "Unable to load configuration",
-      "soffit": "Unable to sign in",
+      "soffit": "You are not logged in! \nSign in and try again",
       "unknown": "An unknown error has occurred"
     }
   }
