--- a/src/main/webapp/src/locales/fr/main.json
+++ b/src/main/webapp/src/locales/fr/main.json
@@ -3,5 +3,7 @@
     "public": "Publique",
     "private": "Privé"
   },
-  "shareOptions": "Options de partage"
+  "shareOptions": "Options de partage",
+  "enabled": "activée",
+  "disabled": "désactivée"
 }
