feat(settings): choose theme easily

--- a/src/main/webapp/src/locales/en/settings.json
+++ b/src/main/webapp/src/locales/en/settings.json
@@ -1,11 +1,10 @@
 {
   "settings": {
-    "appearance": {
-      "subheader": "Appearance",
-      "darkTheme": {
-        "title": "Dark theme",
-        "subtitle": "Enable dark theme"
-      }
+    "theme": {
+      "subheader": "Theme",
+      "system": "Systeme",
+      "light": "Light",
+      "dark": "Dark"
     }
   }
 }
