--- a/src/main/webapp/src/locales/fr/settings.json
+++ b/src/main/webapp/src/locales/fr/settings.json
@@ -1,11 +1,10 @@
 {
   "settings": {
-    "appearance": {
-      "subheader": "Apparence",
-      "darkTheme": {
-        "title": "Thème sombre",
-        "subtitle": "Activer le thème sombre"
-      }
+    "theme": {
+      "subheader": "Thème",
+      "system": "Système",
+      "light": "Clair",
+      "dark": "Sombre"
     }
   }
 }
