refactor: rename nextcloud on nc

--- a/src/main/webapp/src/locales/en/menus.json
+++ b/src/main/webapp/src/locales/en/menus.json
@@ -6,7 +6,7 @@
       "information": "Information",
       "share": "Share",
       "histories": "Historiques",
-      "exportOnNextcloud": "Export on Nextcloud",
+      "exportOnNc": "Export on Nextcloud",
       "download": "Download",
       "delete": "Delete"
     }
