--- a/src/main/webapp/src/locales/fr/menus.json
+++ b/src/main/webapp/src/locales/fr/menus.json
@@ -6,7 +6,7 @@
       "information": "Informations",
       "share": "Partages",
       "histories": "Historiques",
-      "exportOnNextcloud": "Exporter sur Nextcloud",
+      "exportOnNc": "Exporter sur Nextcloud",
       "download": "Télécharger",
       "delete": "Supprimer"
     }
